# CmdAskAI

./: .gitignore  LICENSE  README.md  ask.spec  config.example.toml  pyproject.toml
.github/workflows/: release.yml
ask/: __init__.py  __main__.py  cli.py  config.py  context.py  history.py  llm.py  prompt.py  runner.py  safety.py  ui.py
ask/platform/: __init__.py  unix.py  windows.py
shell/: ask.bash  ask.ps1  ask.zsh
tests/: test_cli.py  test_config.py  test_context.py  test_history.py  test_llm.py  test_platform.py  test_prompt.py  test_runner.py  test_safety.py  test_ui.py
