[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ask-shell"
version = "0.1.0"
description = "Turn natural language into shell commands with confirmation before execution."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "KING006123" }]
keywords = ["cli", "shell", "llm", "natural-language", "terminal", "ai"]
classifiers = [
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Utilities",
]
dependencies = [
  "openai>=1.40.0",
  "prompt_toolkit>=3.0.47",
  "pyperclip>=1.9.0",
  "rich>=13.7.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
]
build = [
  "pyinstaller>=6.0",
]

[project.urls]
Homepage = "https://github.com/KING006123/CmdAskAI"
Repository = "https://github.com/KING006123/CmdAskAI"

[project.scripts]
ask = "ask.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ask*"]
